--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "projectx",
+  "name": "my-project-name",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "^0.5.1"
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-pagespeed": "^1.0.0"
+  },
+  "dependencies": {
+    "grunt-responsive-images": "^0.1.6",
+    "imager.js": "^0.5.0",
+    "psi": "^1.0.6"
   }
 }
